force-app/main/default/objects/Account/fields/VIC__c.field-meta.xml
<CustomField>
    <fullName>VIC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To distinguish VIC users.</description>
    <label>VIC</label>
    <type>Checkbox</type>
</CustomField>