force-app/main/default/objects/Account/fields/Wardrobing_Looks_Count__c.field-meta.xml
<CustomField>
    <fullName>Wardrobing_Looks_Count__c</fullName>
    <label>Wardrobing Looks Count</label>
    <summaryForeignKey>Look_Share__c.Client__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>