force-app/main/default/objects/Account/fields/WW_RMSId__c.field-meta.xml
<CustomField>
    <fullName>WW_RMSId__c</fullName>
    <description>Holds the world wild RMS id for clients that have one. This information is provided for stores coming from Xstore only</description>
    <label>WW RMS Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>