force-app/main/default/objects/Account/validationRules/ACC_VR03_TitleCantBeChanged.validationRule-meta.xml
<ValidationRule>
    <fullName>ACC_VR03_TitleCantBeChanged</fullName>
    <active>true</active>
    <description>Title can&apos;t be changed.</description>
    <errorConditionFormula>NOT($User.BypassVR__c )
&amp;&amp;
ISCHANGED(PersonTitle)
&amp;&amp;
$Profile.Name &lt;&gt; &quot;ICON_Interface DREAM&quot;
&amp;&amp;
$Profile.Name &lt;&gt; &quot;LV_Interface_Datastage&quot;
&amp;&amp;
$Profile.Name &lt;&gt; &quot;LV Pass integration&quot;
&amp;&amp;
RecordType.Name =&quot;Person Account&quot;
&amp;&amp;
NOT( IsProspect__pc )
&amp;&amp;
NOT( SPO_BypassVR__pc )</errorConditionFormula>
    <errorDisplayField>PersonTitle</errorDisplayField>
    <errorMessage>You don&apos;t have the right to change Client&apos;s Title.</errorMessage>
</ValidationRule>