force-app/main/default/objects/Account/validationRules/ACC_VR05_ClientFieldsCantBeChange.validationRule-meta.xml
<ValidationRule>
    <fullName>ACC_VR05_ClientFieldsCantBeChange</fullName>
    <active>false</active>
    <description>You don&apos;t have the right to edit the some Client&apos;s Fields</description>
    <errorConditionFormula>NOT($User.BypassVR__c ) 
&amp;&amp; 
OR ( 
ISCHANGED(Firstname2__pc), 
ISCHANGED(Lastname2__pc), 
ISCHANGED(PersonEmail), 
ISCHANGED(HomePhoneCountrycode__pc), 
ISCHANGED(PersonHomePhone), 
ISCHANGED(MobilePhoneCountryCode__pc), 
ISCHANGED(PersonMobilePhone), 
ISCHANGED(BirthdateYear__pc), 
ISCHANGED(BirthdateMonth__pc), 
ISCHANGED(BirthdateDay__pc), 
ISCHANGED(Nationality__pc), 
ISCHANGED(PassportNumber__pc), 
ISCHANGED(Phone), 
ISCHANGED(PreferredLanguage__pc), 
ISCHANGED(PrimaryAddressLine1__pc), 
ISCHANGED(PrimaryAddressLine2__pc), 
ISCHANGED(PrimaryAddressLine3__pc), 
ISCHANGED(PrimaryCity__pc), 
ISCHANGED(PrimaryZipCode__pc), 
ISCHANGED(PrimaryStateProvince__pc), 
ISCHANGED(PrimaryCountry__pc), 
ISCHANGED(Gender__pc), 
ISCHANGED(Title__pc) 
) 
&amp;&amp; 
$Profile.Name &lt;&gt; &quot;ICON_Interface DREAM&quot; 
&amp;&amp; 
$Profile.Name &lt;&gt; &quot;System Administrator&quot; 
&amp;&amp; 
$Profile.Name &lt;&gt; &quot;LV_Interface_Datastage&quot; 
&amp;&amp; 
$Profile.Name &lt;&gt; &quot;LV Pass integration&quot; 
&amp;&amp; 
!BEGINS($Profile.Name, &apos;ICONiCS&apos;) 
&amp;&amp; 
RecordType.Name =&quot;Person Account&quot; 
&amp;&amp; 
NOT( IsProspect__pc ) 
&amp;&amp; 
NOT( SPO_BypassVR__pc )</errorConditionFormula>
    <errorMessage>You don&apos;t have the right to edit Some Client&apos;s Fields.</errorMessage>
</ValidationRule>