force-app/main/default/objects/Account/validationRules/ACC_VR06_RequiredClientFields.validationRule-meta.xml
<ValidationRule>
    <fullName>ACC_VR06_RequiredClientFields</fullName>
    <active>false</active>
    <description>Civility, FirstName, LastName and at least Email or Phone are required</description>
    <errorConditionFormula>ISPICKVAL( Salutation, &apos;&apos; )
||
ISBLANK( LastName )
||
ISBLANK( FirstName )
||
( ISBLANK( PersonEmail )
&amp;&amp;
ISBLANK( Phone )
&amp;&amp;
ISBLANK( PersonHomePhone )
&amp;&amp;
ISBLANK( PersonMobilePhone ) )</errorConditionFormula>
    <errorMessage>Civility, FirstName, LastName and at least Email or Phone Fields are required</errorMessage>
</ValidationRule>