force-app/main/default/objects/Account/validationRules/ACC_VR07_ICONiCS_New_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>ACC_VR07_ICONiCS_New_Account</fullName>
    <active>false</active>
    <description>Rule to create an account by an ICONiCS user
04-12-2019: VR activated with restricted field based on MyCC mandatory fields (RMS search in the Iconics Flow doesn&apos;t give all the information required by this rule).</description>
    <errorConditionFormula>AND( 
  NOT($User.BypassVR__c),

  ISNEW(),
  CONTAINS(LOWER($Profile.Name), &quot;iconics&quot;),
  
 OR(
    ISBLANK(TEXT(Salutation )), 
    /*ISBLANK(TEXT(Gender__pc)),*/
    ISBLANK(LastName),
    ISBLANK(FirstName),
    ISBLANK(TEXT(SPO_Country__pc))
    /*ISBLANK(TEXT(Typology__pc)),

   AND(
      ISBLANK( PersonEmail), 
      ISBLANK( PersonMobilePhone)
    )*/
  )
)</errorConditionFormula>
    <errorMessage>Civility, FirstName, LastName and Country are required</errorMessage>
</ValidationRule>