force-app/main/default/objects/Account/listViews/All_clients.listView-meta.xml
<ListView>
    <fullName>All_clients</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>DREAMID__c</columns>
    <columns>Segmentation__pc</columns>
    <columns>Typology__pc</columns>
    <columns>PreferredContactChannel__pc</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_PHONE3</columns>
    <columns>PC_EMAIL</columns>
    <columns>PrimaryZipCode__pc</columns>
    <columns>PC_BIRTHDATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>DreamSA__pc</columns>
    <filterScope>Everything</filterScope>
    <label>All clients</label>
</ListView>