force-app/main/default/objects/Account/listViews/My_10K_Potential_10K_Clients.listView-meta.xml
<ListView>
    <fullName>My_10K_Potential_10K_Clients</fullName>
    <columns>indic10KImg__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>TECH_Last36MSpend__pc</columns>
    <columns>TECH_LastPurchasedDateFrom__pc</columns>
    <columns>Typology__pc</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Ind_10K__c</field>
        <operation>equals</operation>
        <value>10K,Potential 10K</value>
    </filters>
    <filters>
        <field>TECH_IsParallelMarket__pc</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My 10K / Potential 10K Clients</label>
</ListView>