force-app/main/default/objects/Account/listViews/My_Birthday_List.listView-meta.xml
<ListView>
    <fullName>My_Birthday_List</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Segmentation__pc</columns>
    <columns>PC_BIRTHDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>PC_BIRTHDATE</field>
        <operation>equals</operation>
        <value>TODAY,NEXT_N_DAYS:7</value>
    </filters>
    <label>My Client Birthday List</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinatesInternal>Corporate_Digital</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>