force-app/main/default/objects/Account/listViews/My_Rassigned.listView-meta.xml
<ListView>
    <fullName>My_Rassigned</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>indic10KImg__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>TECH_LastPurchasedDateFrom__pc</columns>
    <columns>PC_EMAIL</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TECH_IsParallelMarket__pc</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>TECH_OwnerManuallyChanged__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>IsProspect__pc</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Reassigned Clients</label>
</ListView>