force-app/main/default/objects/Account/listViews/My_Recent_Clients.listView-meta.xml
<ListView>
    <fullName>My_Recent_Clients</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Typology__pc</columns>
    <columns>Occupation__pc</columns>
    <columns>Nationality__pc</columns>
    <columns>Gender__pc</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>FirstTrans__pc</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <filters>
        <field>IsProspect__pc</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>TECH_IsParallelMarket__pc</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Recent Clients</label>
</ListView>