force-app/main/default/objects/Account/listViews/My_Store_10K.listView-meta.xml
<ListView>
    <fullName>My_Store_10K</fullName>
    <columns>indic10KImg__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>TECH_LastPurchasedDateFrom__pc</columns>
    <columns>Typology__pc</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ind_10K__c</field>
        <operation>equals</operation>
        <value>10K,Potential 10K</value>
    </filters>
    <filters>
        <field>My_Store__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>TECH_IsParallelMarket__pc</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Store 10K / Potential 10K Clients</label>
</ListView>