force-app/main/default/objects/Account/listViews/My_store_Birthday_list.listView-meta.xml
<ListView>
    <fullName>My_store_Birthday_list</fullName>
    <booleanFilter>(1 OR 2) AND 3 AND 4</booleanFilter>
    <columns>TECH_UpcomingAnniversaryDate__pc</columns>
    <columns>indic10KImg__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Age_Calculator__c</columns>
    <columns>Gifts_offered_for_this_clilent__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TECH_UpcomingAnniversaryDate__pc</field>
        <operation>equals</operation>
        <value>TODAY,NEXT_N_DAYS:56</value>
    </filters>
    <filters>
        <field>TECH_UpcomingWeddingDate__pc</field>
        <operation>equals</operation>
        <value>TODAY,NEXT_N_DAYS:56</value>
    </filters>
    <filters>
        <field>IsProspect__pc</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>TECH_IsParallelMarket__pc</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Clients&apos; Birthday / Wedding</label>
</ListView>