force-app/main/default/objects/Account/listViews/My_Store_Prospects.listView-meta.xml
<ListView>
    <fullName>My_Store_Prospects</fullName>
    <booleanFilter>(1 OR 2) AND 3 AND 4 AND 5</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PrimaryCity__pc</columns>
    <columns>PC_PHONE3</columns>
    <columns>PC_EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Person_Account_Prospect</value>
    </filters>
    <filters>
        <field>ProspectForDream__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>My_Store__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>FirstTrans__pc</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>TECH_IsParallelMarket__pc</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Store Prospects</label>
</ListView>