force-app/main/default/objects/Account/listViews/My_Store_top_200.listView-meta.xml
<ListView>
    <fullName>My_Store_top_200</fullName>
    <columns>CAName__c</columns>
    <columns>indic10KImg__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>TECH_Last36MSpend__pc</columns>
    <columns>TECH_LastPurchasedDateFrom__pc</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TECH_IsParallelMarket__pc</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>TECH_Last36MSpend__pc</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>My_Store__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Store Top 200 Clients</label>
</ListView>