force-app/main/default/objects/Account/listViews/My_Store_Unassigned_Clients.listView-meta.xml
<ListView>
    <fullName>My_Store_Unassigned_Clients</fullName>
    <columns>indic10KImg__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TECH_LastPurchasedDateFrom__pc</columns>
    <columns>PrimaryCity__pc</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>PC_PHONE3</columns>
    <columns>PC_EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>My_Store__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>contains</operation>
        <value>technical</value>
    </filters>
    <filters>
        <field>TECH_IsParallelMarket__pc</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Store Unassigned Clients</label>
</ListView>