force-app/main/default/objects/Account/listViews/My_top200.listView-meta.xml
<ListView>
    <fullName>My_top200</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>indic10KImg__c</columns>
    <columns>TECH_Last36MSpend__pc</columns>
    <columns>TECH_LastPurchasedDateFrom__pc</columns>
    <columns>PC_PHONE3</columns>
    <columns>PC_EMAIL</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TECH_IsParallelMarket__pc</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>TECH_Last36MSpend__pc</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>My Top 200 Clients</label>
</ListView>