force-app/main/default/objects/Account/listViews/MyProspects.listView-meta.xml
<ListView>
    <fullName>MyProspects</fullName>
    <booleanFilter>(1 OR 2) AND 3</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>DREAMID__c</columns>
    <columns>Segmentation__pc</columns>
    <columns>Typology__pc</columns>
    <columns>PreferredContactChannel__pc</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_PHONE3</columns>
    <columns>PC_EMAIL</columns>
    <columns>PrimaryZipCode__pc</columns>
    <columns>PC_BIRTHDATE</columns>
    <columns>LastContactDate__pc</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Person_Account_Prospect</value>
    </filters>
    <filters>
        <field>ProspectForDream__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>TECH_IsParallelMarket__pc</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Prospects</label>
</ListView>