force-app/main/default/objects/Account/listViews/One_Timers.listView-meta.xml
<ListView>
    <fullName>One_Timers</fullName>
    <columns>DREAMID__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Parallel_Market_IMG__c</columns>
    <columns>Segment__c</columns>
    <columns>Sub_Segment__c</columns>
    <columns>TECH_LastPurchasedDateFrom__pc</columns>
    <columns>LastContactDate__pc</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Segment__c</field>
        <operation>equals</operation>
        <value>ONE-TIMER</value>
    </filters>
    <filters>
        <field>Sub_Segment__c</field>
        <operation>equals</operation>
        <value>One Timer</value>
    </filters>
    <label>One-Timers</label>
</ListView>