force-app/main/default/objects/Account/listViews/Repeaters_10K.listView-meta.xml
<ListView>
    <fullName>Repeaters_10K</fullName>
    <columns>DREAMID__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Parallel_Market_IMG__c</columns>
    <columns>Segment__c</columns>
    <columns>Sub_Segment__c</columns>
    <columns>TECH_LastPurchasedDateFrom__pc</columns>
    <columns>LastContactDate__pc</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Segment__c</field>
        <operation>equals</operation>
        <value>REPEATER 10K+</value>
    </filters>
    <filters>
        <field>Sub_Segment__c</field>
        <operation>equals</operation>
        <value>Prestige,VVIC,VIC</value>
    </filters>
    <label>Repeaters 10K+</label>
</ListView>