force-app/main/default/objects/Account/listViews/Repeaters_below_10K.listView-meta.xml
<ListView>
    <fullName>Repeaters_below_10K</fullName>
    <columns>DREAMID__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Parallel_Market_IMG__c</columns>
    <columns>Segment__c</columns>
    <columns>Sub_Segment__c</columns>
    <columns>TECH_LastPurchasedDateFrom__pc</columns>
    <columns>LastContactDate__pc</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Segment__c</field>
        <operation>equals</operation>
        <value>REPEATER BELOW 10K</value>
    </filters>
    <filters>
        <field>Sub_Segment__c</field>
        <operation>equals</operation>
        <value>Aspiring Repeater,Repeater</value>
    </filters>
    <label>Repeaters below 10K</label>
</ListView>